# A-benchmarking-and-visualization-toolkit-for-in-silico-aptamer-evaluation

./: README.md  benchmark.py  dashboard.py  diversity_metrics.py  pyproject.toml
aptamer_bench/: aptabase.py  sequence.py  sequence_metrics.py
tests/: test_aptamer_bench.py
