[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aptamer-bench"
version = "0.1.0"
description = "A benchmarking and visualization toolkit for in-silico aptamer evaluation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["aptamer", "bioinformatics", "drug-discovery", "benchmarking", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.81",
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "streamlit>=1.28",
    "logomaker>=0.8",
    "scipy>=1.11",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/aptamer-bench"
Issues = "https://github.com/YOUR_USERNAME/aptamer-bench/issues"
Documentation = "https://aptamer-bench.readthedocs.io"

[project.scripts]
aptamer-bench = "aptamer_bench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aptamer_bench*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aptamer_bench --cov-report=term-missing"
